--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
 
     <properties>
         <java.version>8</java.version>
-        <maven.compiler.release>8</maven.compiler.release>
     </properties>
 
     <dependencies>
@@ -67,9 +66,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>${maven.compiler.release}</release>
-                    <source>"1.8.0_221</source>
-                    <target>"1.8.0_221</target>
+                    <release>8</release>
                 </configuration>
             </plugin>
             </plugins>
