--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,6 @@
     <name>hw_16_heroku</name>
     <description>Demo project for Spring Boot</description>
 
-    <properties>
-        <maven.compiler.release>8</maven.compiler.release>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -66,7 +62,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>${maven.compiler.release}</release>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <verbose>true</verbose>
                 </configuration>
             </plugin>
             </plugins>
